--- a/index.html
+++ b/index.html
@@ -6,9 +6,52 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
   <link href="src/css/output.css" rel="stylesheet">
 </head>
-<body>
-  <h1 class="font-bold text-3xl text-center font-serif">
-    Halo dunia!
-  </h1>
+<body class="bg-gray-300">
+    <nav id="navbar" class="bg-blue-700">
+      <h1 class="text-center p-4 text-3xl text-white">Recipe Book App</h1>
+    </nav>
+    <div class="container mx-auto mt-12">
+      <div class="flex flex-wrap justify-center">
+        <div class="w-full max-w-sm rounded overflow-hidden shadow-lg bg-white mt-4 sm:w-1/2 lg:w-1/3 lg:mr-6">
+          <img class="w-full" src="./src/img/NasiGoreng.jpeg" alt="Nasi Goreng">
+          <div class="px-6 py-4">
+            <div class="font-bold text-xl mb-2 text-center">Nasi Goreng</div>
+            <p class="text-gray-700 text-base">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error magnam nobis rerum ipsam dolorem qui harum dicta accusantium ab ad.
+            </p>
+            <div class="mt-4">
+              <button class="bg-blue-500 rounded-lg p-2"><a href="#" class="text-white">Detail</a></button>
+            </div>
+          </div>
+        </div>
+    
+        <div class="w-full max-w-sm rounded overflow-hidden shadow-lg bg-white mt-4 sm:w-1/2 lg:w-1/3">
+          <img class="w-full" src="./src/img/NasiGoreng.jpeg" alt="Nasi Goreng">
+          <div class="px-6 py-4">
+            <div class="font-bold text-xl mb-2 text-center">Nasi Goreng</div>
+            <p class="text-gray-700 text-base">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error magnam nobis rerum ipsam dolorem qui harum dicta accusantium ab ad.
+            </p>
+            <div class="mt-4">
+              <button class="bg-blue-500 rounded-lg p-2"><a href="#" class="text-white">Detail</a></button>
+            </div>
+          </div>
+        </div>
+    
+        <div class="w-full max-w-sm rounded overflow-hidden shadow-lg bg-white mt-4 sm:w-1/2 lg:w-1/3 lg:ml-6">
+          <img class="w-full" src="./src/img/NasiGoreng.jpeg" alt="Nasi Goreng">
+          <div class="px-6 py-4">
+            <div class="font-bold text-xl mb-2 text-center">Nasi Goreng</div>
+            <p class="text-gray-700 text-base">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error magnam nobis rerum ipsam dolorem qui harum dicta accusantium ab ad.
+            </p>
+            <div class="mt-4">
+              <button class="bg-blue-500 rounded-lg p-2"><a href="#" class="text-white">Detail</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <script src="./src/js/app.js"></script>
 </body>
 </html>
