--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <!-- Modal Box -->
-<div id="myModal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 lg:hidden sm:hidden md:hidden">
+<div id="myModal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
   <div class="bg-white rounded-lg overflow-hidden shadow-lg max-w-md w-full p-6">
     <div class="flex justify-between items-center border-b pb-2">
       <h2 class="text-xl font-bold">Detail Nasi Goreng</h2>
